ibuilder/tests/not_compile/unnamed_hidden.stderr
error: unnamed fields cannot be hidden
 --> $DIR/unnamed_hidden.rs:4:12
  |
4 | struct Foo(#[ibuilder(hidden)] i64);
  |            ^^^^^^^^^^^^^^^^^^^^^^^
