ibuilder/tests/not_compile/unnamed_hidden.rs
use ibuilder::*;

#[derive(IBuilder)]
struct Foo(#[ibuilder(hidden)] i64);

fn main() {
    Foo::builder();
}
